# rocket_admin

./: .env  Cargo.toml  Dockerfile  README.md  deployment.sh
docs/: user.http
docs/sql/system/: sys_menu.sql  sys_role_menu.sql  sys_user_role.sql
docs/test/: http-client.env.json
migrations/2023-08-14-012215_create_user/: up.sql
migrations/2023-08-14-012248_create_role/: up.sql
migrations/2023-08-14-012253_create_menu/: up.sql
src/: main.rs  setup.rs
src/common/: error_handler.rs  mod.rs  result.rs
src/handler/: menu_handler.rs  role_handler.rs  user_handler.rs
src/handler/system/: menu_handler.rs  role_handler.rs  sys_menu_handler.rs  sys_role_handler.rs  sys_user_handler.rs  user_handler.rs
src/middleware/: auth.rs
src/model/: user.rs
src/model/system/: sys_menu_model.rs
src/utils/: auth.rs  jwt_util.rs  mod.rs
src/vo/: menu_vo.rs  mod.rs  user_vo.rs
src/vo/system/: menu_vo.rs  role_vo.rs  sys_menu_vo.rs
