[package]
name = "rocket-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

log = "0.4"
tokio = { version = "1.29.1" }
sea-orm = { version = "1.0.1", features = ["sqlx-mysql", "runtime-async-std-native-tls", "with-chrono", "debug-print", "macros"] }
tracing-subscriber = "0.3.17"

jsonwebtoken = "9.3.0"

futures = { version = "0.3", default-features = false }
thiserror = "1.0"
