[package]
name = "rocket-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3.17"

log = "0.4"
diesel = { version = "2.2.4", features = ["mysql", "chrono", "r2d2"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "serde"] }

r2d2 = "0.8"
r2d2-diesel = "1.0.0"
once_cell = "1.18.0"

jsonwebtoken = "9.3.0"

futures = { version = "0.3", default-features = false }
thiserror = "2.0.3"
